# battleVision

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
Src/: FileTGA.h  Logger.cpp  Logger.h
Src/battleView/: main.cpp
Src/battleView/bvl/: BVGUITypes.h  BVGlobal.h  BVTypes.h  Color.h  DelayTimer.h  Point.h  TimePoint.h  WindowSettings.h
Src/battleView/core/: DrawStrategy.cpp  DrawStrategy.h  IDrawer.h  Maneuver.cpp  Maneuver.h  ManeuverFactory.cpp  ManeuverFactory.h  MoveManeuver.h  OpponentInfo.h  ResizeManeuver.h  RotateManeuver.h  Unit.cpp  Unit.h  UnitDrawInfo.h  UnitFactory.cpp  UnitFactory.h  UnitGeneralInfo.h  UnitInfo.cpp  UnitInfo.h  UnitsProcessor.cpp  UnitsProcessor.h
Src/battleView/editor/: test_generator.cpp  test_generator.h
Src/battleView/gui/: BattleDrawWindow.cpp  BattleDrawWindow.h  BattleField.cpp  BattleField.h  CavalryOpenGLDraw.h  ConsoleUnitsDrawer.cpp  ConsoleUnitsDrawer.h  InfantryOpenGLDraw.h  MainWindow.cpp  MainWindow.h  OpenGLDrawStrategy.h  OpenGLTexture.h  OpenGLUnit.cpp  OpenGLUnit.h  OpenGLUnitsDrawer.cpp  OpenGLUnitsDrawer.h  RenderInfo.h  SettingsWindow.cpp  SettingsWindow.h  ShaderProgram.cpp  ShaderProgram.h  ShadersField.h  ShadersUnit.h
Src/battleView/gui/glad/include/glad/: glad.h
Src/battleView/gui/glad/src/: glad.c
